# sereni-work-api

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  compose.yaml  drizzle.config.ts  eslint.config.mjs  package.json  tsconfig.json
.github/workflows/: ci.yml
docs/: account-provisioning.md  api-design.md  architecture.md  database.md  optimization.md  permissions.md  programming-principles.md
optimizer/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
optimizer/src/: handler.py  models.py  qubo.py  solution.py  solvers.py  sqa.py
optimizer/tests/: test_handler.py  test_sqa.py
src/: app.ts  env.ts  integration.test.ts  local.ts
src/db/: client.ts  seed.ts
src/db/migrations/: 0000_sticky_venom.sql  0001_icy_daimon_hellstrom.sql  0002_sour_dreadnoughts.sql  0003_smooth_bruce_banner.sql
src/db/schema/: assignments.ts  audit-logs.ts  companies.ts  enums.ts  evaluations.ts  index.ts  optimization.ts  participants.ts  reflections.ts  relations.ts  reports.ts  staff.ts
src/lib/: account-credentials.ts  audit.ts  configure-openapi.ts  create-app.ts  dates.ts  errors.ts  schemas.ts  types.ts
src/lib/clients/: optimizer.ts  supabase-auth-admin.ts
src/middleware/: auth.test.ts  auth.ts  require-role.ts
src/modules/assignments/: assignments.domain.ts  assignments.handlers.ts  assignments.index.ts  assignments.me.routes.ts  assignments.repository.ts  assignments.routes.ts  assignments.schema.ts  assignments.service.ts  assignments.test.ts
src/modules/companies/: companies.handlers.ts  (+5 more)
supabase/: config.toml
(+64 files in other folders)
