[project]
name = "sereni-work-optimizer"
version = "0.1.0"
description = "体験実習割当の最適化処理（QUBO 生成・ソルバー実行・検証）"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "C4",  # flake8-comprehensions
  "T20", # flake8-print (print 禁止。Lambda では logging を使う)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
